# qsoripper

./: .env.example  .gitignore  README.md  buf.gen.yaml  buf.yaml  build.ps1  package-lock.json  package.json  rust-coverage.lcov  rust-toolchain.toml  start-qsoripper.ps1  stop-qsoripper.ps1  stress-report.html  tsconfig.json
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  implementer.agent.md  investigator.agent.md  planner.agent.md  security-auditor.agent.md  ui-reviewer.agent.md
.github/instructions/: architecture.instructions.md  copilot-customization.instructions.md  integrations.instructions.md  proto-contract.instructions.md  rust.instructions.md  ui-ux.instructions.md
.github/prompts/: debug-investigation.prompt.md  feature-implementation.prompt.md  rust-engine-change.prompt.md
.github/workflows/: copilot-setup-steps.yml  dotnet-quality.yml  full-stack-quality.yml  rust-quality.yml  win32-quality.yml
coverage/0df21c42-b92a-488d-bf26-0441cc4dca5d/: coverage.cobertura.xml
coverage/0e65a2a8-c240-4851-9066-39ded6468d9d/: coverage.cobertura.xml
coverage/e51dea7b-220e-4b94-bc92-d7761463fe4a/: coverage.cobertura.xml
coverage/report/: Summary.txt
docs/api/: README.md  client-integration.md  logbook-service.md  lookup-service.md  setup-service.md  station-profile-service.md  workflows.md
docs/architecture/: data-model.md  engine-specification.md
docs/development/: ui-inspection.md
docs/integrations/: adif-specification.md  qrz-logbook-api.md  qrz-xml-lookup-api.md
proto/domain/: band.proto  callsign.proto  callsign_ambiguity.proto  callsign_record.proto  conflict_policy.proto  debug_http_exchange.proto  debug_http_header.proto  dxcc_entity.proto  geo_source.proto  lookup.proto  lookup_result.proto  lookup_state.proto  mode.proto  modifier_kind.proto  qsl_preference.proto  qsl_status.proto  qso.proto  qso_record.proto  rig_connection_status.proto  rig_snapshot.proto  rst_report.proto  space_weather_snapshot.proto  space_weather_status.proto  station.proto  station_profile.proto  station_snapshot.proto  sync_config.proto  sync_status.proto
proto/services/: active_station_context.proto  adif_chunk.proto  apply_runtime_config_request.proto  apply_runtime_config_response.proto  batch_lookup_request.proto  (+116 more)
scripts/: capture-avalonia.ps1  capture-tui.ps1  capture-web-diff.ts  capture-web.ts  drive-avalonia.ps1  drive-tui.ts  fake-rigctrld.ps1  inspect-latest.ps1  ux-web-common.ts
src/c/qsoripper-win32/: CMakeLists.txt
src/c/qsoripper-win32/include/: backend_ffi_gate.h  qsoripper_ffi.h
src/c/qsoripper-win32/src/: backend_ffi_gate.c  main.c
src/c/qsoripper-win32/tests/: backend_lifetime_tests.c  cli_exit_code_regression.c  win32_issue_regressions.c
src/rust/: Cargo.toml  deny.toml  rustfmt.toml
src/rust/logripper-core/: Cargo.toml  build.rs
src/rust/logripper-core/src/: lib.rs
src/rust/logripper-core/src/adif/: mapper.rs  mod.rs  normalize.rs
src/rust/logripper-core/src/adif/data/: dxcc_entities.tsv  submode_aliases.tsv
src/rust/logripper-core/src/application/: logbook.rs
src/rust/logripper-core/src/domain/: band.rs  lookup.rs  mod.rs  mode.rs  qso.rs  station.rs
src/rust/logripper-core/src/ffi/: dsp.rs  mod.rs
src/rust/logripper-core/src/lookup/: coordinator.rs  mod.rs  provider.rs  qrz_xml.rs
src/rust/logripper-core/src/proto/: mod.rs
src/rust/logripper-core/src/storage/: ports.rs  query.rs
src/rust/logripper-core/tests/: adif_integration.rs  stress_test.rs
src/rust/logripper-server/: Cargo.toml
src/rust/logripper-server/src/: main.rs  runtime_config.rs  setup.rs  station_profile_support.rs
src/rust/logripper-storage-memory/: Cargo.toml
src/rust/logripper-storage-memory/src/: lib.rs
src/rust/logripper-storage-sqlite/: Cargo.toml
src/rust/logripper-storage-sqlite/src/: builder.rs  lib.rs  migrations.rs
src/rust/logripper-storage-sqlite/src/migrations/: 0001_initial.sql
src/rust/logripper-tui/: Cargo.toml
src/rust/logripper-tui/src/: main.rs
src/rust/qsoripper-core/: Cargo.toml  build.rs
src/rust/qsoripper-core/src/: lib.rs
src/rust/qsoripper-core/src/adif/: maidenhead.rs  mapper.rs  mod.rs  normalize.rs  zone_lookup.rs
src/rust/qsoripper-core/src/application/: logbook.rs  mod.rs
src/rust/qsoripper-core/src/domain/: band.rs  callsign_parser.rs  lookup.rs  mod.rs  mode.rs  qso.rs  station.rs
src/rust/qsoripper-core/src/ffi/: dsp.rs  mod.rs
src/rust/qsoripper-core/src/lookup/: coordinator.rs  mod.rs  provider.rs  qrz_xml.rs
src/rust/qsoripper-core/src/proto/: mod.rs
src/rust/qsoripper-core/src/qrz_logbook/: mod.rs
src/rust/qsoripper-core/src/rig_control/: band_mapping.rs  mod.rs  mode_mapping.rs  monitor.rs  provider.rs  rigctld.rs
src/rust/qsoripper-core/src/space_weather/: mod.rs  monitor.rs  noaa.rs  provider.rs
src/rust/qsoripper-core/src/storage/: error.rs  mod.rs  ports.rs  query.rs
src/rust/qsoripper-core/tests/: adif_integration.rs  stress_test.rs
src/rust/qsoripper-ffi/: Cargo.toml  build.rs  cbindgen.toml  qsoripper_ffi.h
src/rust/qsoripper-ffi/src/: client.rs  lib.rs  types.rs
src/rust/qsoripper-ffi/tests/: integration.rs
src/rust/qsoripper-server/: Cargo.toml
src/rust/qsoripper-server/src/: main.rs  runtime_config.rs  setup.rs  station_profile_support.rs  sync.rs  sync_scheduler.rs
src/rust/qsoripper-storage-memory/: Cargo.toml
src/rust/qsoripper-storage-memory/src/: lib.rs
src/rust/qsoripper-storage-sqlite/: Cargo.toml
src/rust/qsoripper-storage-sqlite/src/: builder.rs  lib.rs
src/rust/qsoripper-stress/: Cargo.toml
src/rust/qsoripper-stress-tui/: Cargo.toml
src/rust/qsoripper-stress-tui/src/: main.rs
src/rust/qsoripper-stress/src/: controller.rs  main.rs  runner.rs
src/rust/qsoripper-tui/: Cargo.toml
src/rust/qsoripper-tui/src/: app.rs  events.rs  form.rs  grpc.rs  main.rs
src/rust/qsoripper-tui/src/ui/: advanced_form.rs  confirm_dialog.rs  footer.rs  header.rs  help.rs  log_form.rs  lookup_panel.rs  mod.rs  recent_qsos.rs
tests/: Build.Tests.ps1  Run-EngineConformance.ps1  Run-StressTest.Tests.ps1  Run-StressTest.ps1
(+440 files in other folders)
