[workspace]
resolver = "2"
members = [
    "logripper-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rtreit/logripper"

[workspace.dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
