[workspace]
resolver = "2"
members = [
    "qsoripper-core",
    "qsoripper-ffi",
    "qsoripper-server",
    "qsoripper-storage-memory",
    "qsoripper-storage-sqlite",
    "qsoripper-stress",
    "qsoripper-stress-tui",
    "qsoripper-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/rtreit/qsoripper"

[workspace.dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
sqlite = { version = "0.37", features = ["bundled"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "warn"
cast_lossless = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
manual_string_new = "warn"
implicit_clone = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
