[package]
name = "logripper-core"
description = "Core engine for LogRipper ham radio logging system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
difa = "0.1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
