[package]
name = "logripper-core"
description = "Core engine for LogRipper ham radio logging system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
difa = "0.1"
thiserror = "2"
chrono = "0.4"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true }
futures = "0.3"

[build-dependencies]
tonic-build = "0.12"
cc = "1"
