[package]
name = "logripper-server"
description = "Runnable gRPC server host for the LogRipper engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logripper-core = { path = "../logripper-core" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = "0.1"

