[package]
name = "logripper-server"
description = "Runnable gRPC server host for the LogRipper engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logripper-core = { path = "../logripper-core", version = "0.1.0" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = "0.1"

[lints]
workspace = true
