[package]
name = "logripper-server"
description = "Runnable gRPC server host for the LogRipper engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dotenvy = "0.15"
logripper-core = { path = "../logripper-core", version = "0.1.0" }
logripper-storage-memory = { path = "../logripper-storage-memory", version = "0.1.0" }
logripper-storage-sqlite = { path = "../logripper-storage-sqlite", version = "0.1.0" }
prost-types = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
tokio-stream = "0.1"
toml = "0.8"
tonic = { workspace = true }

[lints]
workspace = true
