[package]
name = "logripper-storage-sqlite"
description = "SQLite storage adapter for LogRipper engine services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logripper-core = { path = "../logripper-core", version = "0.1.0" }
prost = { workspace = true }
prost-types = { workspace = true }
sqlite = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
