[package]
name = "logripper-tui"
description = "Terminal UI for LogRipper ham radio logging system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logripper-core = { path = "../logripper-core" }
tokio = { workspace = true }
