[package]
name = "qsoripper-tui"
description = "Terminal UI for QsoRipper ham radio logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "qsoripper-tui"
path = "src/main.rs"

[dependencies]
qsoripper-core = { path = "../qsoripper-core", version = "0.1.0" }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tonic = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
prost-types = { workspace = true }
chrono = "0.4"
anyhow = "1"

[lints]
workspace = true
